objects/Quick_Theme_Element__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Background_Color__c</fullName>
        <label>Background Color</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Border__c</fullName>
        <label>Border</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Link_State__c</fullName>
        <label>Link State</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Hover</fullName>
                </value>
                <value>
                    <fullName>Focus</fullName>
                </value>
                <value>
                    <fullName>Visited</fullName>
                </value>
                <value>
                    <fullName>Clicked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quick_Theme__c</fullName>
        <label>Quick Theme</label>
        <referenceTo>Quick_Theme__c</referenceTo>
        <relationshipLabel>Quick Theme Elements</relationshipLabel>
        <relationshipName>Quick_Theme_Elements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Text_Color__c</fullName>
        <label>Text Color</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Decoration__c</fullName>
        <label>Text Decoration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Text_Decoration</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text_Font_Weight__c</fullName>
        <label>Text Font Weight</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Font_Weight</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text_Size__c</fullName>
        <label>Text Size</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Header Area</fullName>
                </value>
                <value>
                    <fullName>Header Links</fullName>
                </value>
                <value>
                    <fullName>Menu Bar Area</fullName>
                </value>
                <value>
                    <fullName>Top Menu Link</fullName>
                </value>
                <value>
                    <fullName>Sub Menu Area</fullName>
                </value>
                <value>
                    <fullName>Sub Menu Link</fullName>
                </value>
                <value>
                    <fullName>Search Button</fullName>
                </value>
                <value>
                    <fullName>Hero Button 1</fullName>
                </value>
                <value>
                    <fullName>Hero Button 2</fullName>
                </value>
                <value>
                    <fullName>Hero Active Tab Indicator</fullName>
                </value>
                <value>
                    <fullName>Widget Header</fullName>
                </value>
                <value>
                    <fullName>Buttons</fullName>
                </value>
                <value>
                    <fullName>Top Category</fullName>
                </value>
                <value>
                    <fullName>Top Category Link</fullName>
                </value>
                <value>
                    <fullName>Sub Category Area</fullName>
                </value>
                <value>
                    <fullName>Sub Category Link</fullName>
                </value>
                <value>
                    <fullName>Footer Area</fullName>
                </value>
                <value>
                    <fullName>Footer Link</fullName>
                </value>
                <value>
                    <fullName>Add to Cart Button</fullName>
                </value>
                <value>
                    <fullName>Checkout Button</fullName>
                </value>
                <value>
                    <fullName>Breadcrumb Area</fullName>
                </value>
                <value>
                    <fullName>Breadcrumb Link</fullName>
                </value>
                <value>
                    <fullName>Panels</fullName>
                </value>
                <value>
                    <fullName>Panel Footer</fullName>
                </value>
                <value>
                    <fullName>General Links</fullName>
                </value>
                <value>
                    <fullName>Top Header Area</fullName>
                </value>
                <value>
                    <fullName>Middle Header Area</fullName>
                </value>
                <value>
                    <fullName>Search Form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Quick Theme Element</label>
    <nameField>
        <displayFormat>QSE-{0000}</displayFormat>
        <label>Quick Theme Element Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quick Theme Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>